fix on mobile

--- a/css/akhome.css
+++ b/css/akhome.css
@@ -167,8 +167,7 @@
 	}
 
 	.left>.onimage{
-		color:transparent;
-		
+		display:none;
 		/* background: #222222ff; */
 	}
 
